--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -961,7 +961,7 @@
     .schedule-drop-text{
         color: #bdc1c6;
     }
-    ::ng-deep mat-datepicker-toggle {
+    ::ng-deep .mat-datepicker-toggle {
         position: absolute;
         left: 263px;
         top: 370px;
