--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -2,25 +2,25 @@
     <div class="scheduler-box">
         <span class="scheduler-txt">Date</span>
         <!-- <input id="scheduleDateId" type="text" class="input-text date-pick" placeholder="Select Date"> -->
-          <input matInput [matDatepicker]="dp3"  class="input-text date-pick" placeholder="Select Date" (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)" autocomplete="off">
+          <input matInput [matDatepicker]="dp3"  class="input-text date-pick" placeholder="Select Date" (dateInput)="addEvent('input', $event , 'regular')" (dateChange)="addEvent('change', $event ,'reguar')" autocomplete="off">
           <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
           <mat-datepicker #dp3 disabled="false"></mat-datepicker>
 
-        <span class="scheduler-txt time">Time : </span>
-        <input id="scheduleHr" type="number" min="0" max="23" class="input-text timeHH" placeholder="HH">  <!-- <span class="scheduler-colon">:</span> -->
-        <input id="scheduleMn" type="number" min="0" max="59" class="input-text timeMM" placeholder="MM">
+        <span class="scheduler-txt time">Time </span>
+        <input id="scheduleHr" type="number" min="0" max="11" class="input-text timeHH" placeholder="HH" name = "timeHH" [(ngModel)] = "timeHH" (ngModelChange)="modelChangeFn($event,'HH')">  <!-- <span class="scheduler-colon">:</span> -->
+        <input id="scheduleMn" type="number" min="0" max="59" class="input-text timeMM" placeholder="MM" name = "timeMM" [(ngModel)] = "timeMM" (ngModelChange)="modelChangeFn($event,'MM')"> 
 
-        <div id ="schedule-AM" class="schedule-AM active">AM</div>
-        <div id ="schedule-PM"  class="schedule-PM">PM</div>
+        <div id ="schedule-AM" class="schedule-AM " [ngClass] = "{'active' : meridiem == 'AM'}" (click)="changeMeridiem('AM')">AM</div>
+        <div id ="schedule-PM"  class="schedule-PM" [ngClass] = "{'active' : meridiem == 'PM'}" (click)="changeMeridiem('PM')">PM</div>
 
         <!-- dropdown -->
         <div class="kr-sg-dropdowns schedule-timZon">
           <div class="dropdown dropdown-open">
-              <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="schedule-drop-text">Time Zone</span></button>                                            
+              <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span [ngClass] = "{'schedule-drop-text' : stz == 'Time Zone'}">{{stz}}</span></button>                                            
               <ul class="dropdown-menu content-menu">                                               
-                <li><a>IST</a></li>
-                <li><a>EST</a></li>
-                <li><a>NST</a></li>
+                <li (click) = "timeZone('IST')"><a>IST</a></li>
+                <li (click) = "timeZone('EST')"><a>EST</a></li>
+                <li (click) = "timeZone('UTC')"><a>UTC</a></li>
               </ul>
             </div>
         </div>
@@ -28,15 +28,15 @@
         <span class="scheduler-Interval-txt">Interval</span>
         <div class="kr-sg-dropdowns schedule-Interval">
           <div class="dropdown dropdown-open">
-              <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"> <span class="schedule-drop-text">Does not repeat</span></button>                                            
+              <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"> <span>{{rstz}}</span></button>                                            
               <ul class="dropdown-menu content-menu">                                               
-                <li><a>Does not repeat</a></li>
-                <li><a>Daily</a></li>
-                <li><a>Weekly</a></li>
-                <li><a>Monthly</a></li>
-                <li><a>Anually</a></li>
-                <li><a>Every weekday(Monday to Friday)</a></li>
-                <li (click) = "openCustomRecModal()"><a>Custom</a></li>
+                <li (click) = "repeatTimeZone('Does not repeat')"><a>Does not repeat</a></li>
+                <li (click) = "repeatTimeZone('Daily')"><a>Daily</a></li>
+                <li (click) = "repeatTimeZone('Weekly')"><a>Weekly</a></li>
+                <li (click) = "repeatTimeZone('Monthly')"><a>Monthly</a></li>
+                <li (click) = "repeatTimeZone('Anually')"><a>Anually</a></li>
+                <li (click) = "repeatTimeZone('Every weekday(Monday to Friday)')"><a>Every weekday(Monday to Friday)</a></li>
+                <li (click) = "openCustomRecModal('Custom')"><a>Custom</a></li>
               </ul>
             </div>
         </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="ends-never sp-on">
               <input type="radio" checked="checked" name="radio" class="ends-radio"> <span class="sp">On</span>
-              <input matInput [matDatepicker]="dpCust"  class="input-text date-pick" placeholder="Select Date" (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)" autocomplete="off">
+              <input matInput [matDatepicker]="dpCust"  class="input-text date-pick" placeholder="Select Date" (dateInput)="addEvent('input', $event,'custom')" (dateChange)="addEvent('change', $event , 'custom')" autocomplete="off">
               <mat-datepicker-toggle matSuffix [for]="dpCust"></mat-datepicker-toggle>
               <mat-datepicker #dpCust disabled="false"></mat-datepicker>
             </div>
@@ -98,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="modal-footer" [ngClass]="{'centerModel': resourceIDToOpen}">
+        <div class="modal-footer">
             <button type="button" class="kr-sg-button-primary btn_md" data-dismiss="modal" (click)="closeCustomRecModal()">Ok</button>
             <button type="button" class="kr-sg-button-secondary btn_md d-none" data-dismiss="modal" (click)="closeCustomRecModal()">Cancel</button>
         </div>
