--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -191,7 +191,7 @@
         <div class="tabs-sec">
           <span class="tab-title ">Response Preview</span>
         </div>
-        <div class="pr-4 pl-4 pb-4 m-4 bg-white">
+        <div class="responsePreviewBlock">
           <ng-container *ngTemplateOutlet="botResponsePreview; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
         </div>
       </div>
