--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -392,7 +392,7 @@ body::-webkit-scrollbar {
             border: 0;
             line-height: 0;
             img{
-                margin-right: 6px;
+                margin-right: 6px; // Need Clarity On Fixed Margin Values
                 position: relative;
                 top: -1px;
             }
@@ -694,7 +694,7 @@ div.divBlockEmptylastChild:first-child {
                     padding: 0px 10px; 
                     cursor: pointer;         
                     .sortImg{
-                        transform: rotate(270deg);
+                        // transform: rotate(270deg);
                         top: -0.7px;
                         position: relative;
                         &.assending{
