--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -155,16 +155,71 @@
             }
         } 
     }
+    .add-alternative-questions{
+        padding: 15px 30px;
+        align-items: center;
+        background: #EFF0F1;
+        margin: 40px 0 0 0;
+        .question-name{
+            color: #202124;
+            font-weight: 500;
+            font-size: 14px;
+        }
+        .que-desc{
+            color: #8A959F;
+            font-size: 12px;
+        }
+        .kr-sg-button-primary{
+            border-radius: 4px;
+            font-size: 14px;
+            border: 1px solid #BDC1C6;
+            background: #FFFFFF;
+            color: #202124;
+        }
+    }
+    .added-questions-list{
+        padding: 13px 30px;
+        background: #FFFFFF;
+        box-shadow: inset 0px -1px 0px #E4E5E7;
+        position: relative;
+        transition: 0.3s all ease;
+        .question-name{
+            color: #202124;
+            font-weight: 500;
+            font-size: 14px;
+            padding-right: 20px;
+        }
+        .added-tags{
+            color: #5F6368;
+            font-size: 12px;
+            padding-right: 20px;                                
+        }
+        .delete-icon{                               
+            display: none;
+            position: absolute;
+            right: 30px;
+            top: 27px;
+        }
+        &:hover{
+            .delete-icon{                                   
+                display: block;
+                &.pos-trash {
+                    top: 16px;
+                }
+            }
+        }
+    }
     .responseEditorContainer{
         background: #F3F3F3;
         border-radius: 5px;
       .responsePreviewBlock{
           background: #ffffff;
-          margin-top: 170px !important;
           padding-left: 1.5rem!important;
           padding-bottom: 1.5rem!important;
           padding-right: 1.5rem!important;
           margin:  110px 1.5rem 1.5rem 1.5rem !important;
+        //   margin:  77px 1.5rem 1.5rem 1.5rem !important;
+        //   height: 360px;
       }
     } 
     .tabs-sec{
